; ModuleID = '/home/carl/AnghaBench/linux/drivers/iommu/extr_intel-iommu.c_root_entry_uctp.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iommu/extr_intel-iommu.c_root_entry_uctp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.root_entry = type { i32 }

@VTD_PAGE_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.root_entry*)* @root_entry_uctp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @root_entry_uctp(%struct.root_entry* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.root_entry*, align 8
  store %struct.root_entry* %0, %struct.root_entry** %3, align 8
  %4 = load %struct.root_entry*, %struct.root_entry** %3, align 8
  %5 = getelementptr inbounds %struct.root_entry, %struct.root_entry* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = and i32 %6, 1
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %16

10:                                               ; preds = %1
  %11 = load %struct.root_entry*, %struct.root_entry** %3, align 8
  %12 = getelementptr inbounds %struct.root_entry, %struct.root_entry* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @VTD_PAGE_MASK, align 4
  %15 = and i32 %13, %14
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %10, %9
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
